--- a/openair/app/src/main/res/drawable/bt_corner.xml
+++ b/openair/app/src/main/res/drawable/bt_corner.xml
@@ -1,12 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" android:padding = "10dp">
-    <solid android:color="#ffffff"></solid>
-    <corners
-        android:bottomLeftRadius="100dp"
-        android:bottomRightRadius="100dp"
-        android:topLeftRadius="100dp"
-        android:topRightRadius="100dp"></corners>
-    <stroke android:width="2dp"
-        android:color="#BDBDBD"></stroke>
-</shape>
+
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="false">
+        <shape xmlns:android="http://schemas.android.com/apk/res/android"
+            android:shape="rectangle" android:padding = "10dp">
+            <solid android:color="#FCD9F3F7"></solid>
+            <corners
+                android:bottomLeftRadius="10dp"
+                android:bottomRightRadius="10dp"
+                android:topLeftRadius="10dp"
+                android:topRightRadius="10dp"></corners>
+            <stroke android:width="1dp"
+                android:color="#F9F9F9"></stroke>
+        </shape>
+    </item>
+    <item android:state_pressed="true" android:id="@android:id/mask">
+
+            <shape xmlns:android="http://schemas.android.com/apk/res/android" android:padding="10dp" android:shape="rectangle">
+
+                <solid android:color="#86C1CF"></solid>
+                <corners android:bottomLeftRadius="10dp" android:bottomRightRadius="10dp" android:topLeftRadius="10dp" android:topRightRadius="10dp">
+                    <ripple android:color="@color/colorLogo"/>
+                </corners>
+                <stroke android:width="1dp" android:color="#F9F9F9"></stroke>
+            </shape>
+    </item>
+</selector>
