--- a/openair/app/src/main/res/layout/activity_login.xml
+++ b/openair/app/src/main/res/layout/activity_login.xml
@@ -74,7 +74,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
-                android:background="#FCD9F3F7"
+                android:background="@drawable/bt_corner"
                 android:fontFamily="@font/ygotjalnanfont"
                 android:text="@string/action_sign_in"
                 android:textStyle="bold" />
