--- a/openair/app/src/main/res/layout/custom_dialog_combo.xml
+++ b/openair/app/src/main/res/layout/custom_dialog_combo.xml
@@ -89,7 +89,7 @@
         android:id="@+id/areaCombo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="1dp"
         android:ems="10"
         android:fontFamily="@font/ygotjalnanfont"
         android:inputType="textPersonName" />
@@ -104,24 +104,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="1dp"
             android:layout_weight="1"
-            android:background="#EDF3FA"
+            android:background="@drawable/bt_corner"
             android:fontFamily="@font/ygotjalnanfont"
             android:text="취소"
-            android:textColor="@color/ic_launcher_background" />
+            android:textColor="#000"
+            />
 
         <Button
             android:id="@+id/okButtonCombo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="1dp"
             android:layout_marginTop="10dp"
             android:layout_weight="1"
-            android:background="#EDF3FA"
+            android:background="@drawable/bt_corner"
             android:fontFamily="@font/ygotjalnanfont"
-            android:text="입력완료"
-            android:textColor="@color/ic_launcher_background" />
+            android:text="모집하기"
+            android:textColor="#000" />
     </LinearLayout>
 
 </LinearLayout>
