--- a/openair/app/src/main/res/layout/custom_dialog_match.xml
+++ b/openair/app/src/main/res/layout/custom_dialog_match.xml
@@ -16,30 +16,52 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/ygotjalnanfont"
         android:gravity="center"
-        android:text="매칭모집 글쓰기"
+        android:text="매칭 모집 글쓰기"
         android:textColor="#000"
         android:textSize="20dp"
         android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/ygotjalnanfont"
+        android:text=" 팀 이름" />
 
     <EditText
         android:id="@+id/totalCombo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="1dp"
         android:ems="10"
         android:fontFamily="@font/ygotjalnanfont"
-        android:hint="team"
         android:inputType="textPersonName" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/ygotjalnanfont"
+        android:text=" 모집 인원 수" />
 
     <EditText
         android:id="@+id/recruitCombo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="1dp"
         android:ems="10"
         android:fontFamily="@font/ygotjalnanfont"
-        android:hint="recruit"
         android:inputType="textPersonName" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/ygotjalnanfont"
+        android:text=" 시간대 설정" />
 
     <Spinner
         android:id="@+id/spiner1Combo"
@@ -55,14 +77,21 @@
         android:layout_marginTop="20dp"
         android:entries="@array/time" />
 
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:fontFamily="@font/ygotjalnanfont"
+        android:text=" 매칭 장소" />
+
     <EditText
         android:id="@+id/areaCombo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="1dp"
         android:ems="10"
         android:fontFamily="@font/ygotjalnanfont"
-        android:hint="area"
         android:inputType="textPersonName" />
 
     <LinearLayout
@@ -75,24 +104,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="1dp"
             android:layout_weight="1"
-            android:background="#EDF3FA"
+            android:background="@drawable/bt_corner"
             android:fontFamily="@font/ygotjalnanfont"
             android:text="취소"
-            android:textColor="@color/ic_launcher_background" />
+            android:textColor="#000" />
 
         <Button
             android:id="@+id/okButtonCombo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="1dp"
             android:layout_marginTop="10dp"
             android:layout_weight="1"
-            android:background="#EDF3FA"
+            android:background="@drawable/bt_corner"
             android:fontFamily="@font/ygotjalnanfont"
-            android:text="입력완료"
-            android:textColor="@color/ic_launcher_background" />
+            android:text="매칭 모집"
+            android:textColor="#000" />
     </LinearLayout>
 
 </LinearLayout>
