--- a/openair/app/src/main/res/layout/fragment_menu3.xml
+++ b/openair/app/src/main/res/layout/fragment_menu3.xml
@@ -9,10 +9,10 @@
         android:id="@+id/ComunityCategoryButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#C6DCF0"
+        android:background="#FCD9F3F7"
         android:fontFamily="@font/ygotjalnanfont"
-        android:text="전체"
-        android:textColor="#FFF" />
+        android:text="카테고리 선택"
+        android:textColor="#000" />
 
     <LinearLayout
         android:layout_width="match_parent"
