--- a/openair/app/src/main/res/layout/nav_header_main.xml
+++ b/openair/app/src/main/res/layout/nav_header_main.xml
@@ -17,23 +17,20 @@
         android:layout_marginBottom="30dp"
         app:srcCompat="@drawable/newlogo" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+    <TextView
+        android:id="@+id/textNavEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/ygotjalnanfont"
+        android:textColor="#015" />
 
-        <TextView
-            android:id="@+id/textNavEmail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#015" />
-
-        <TextView
-            android:id="@+id/textView18"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="오픈에어를 이용해 주셔서 감사합니다." />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/textView18"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:fontFamily="@font/ygotjalnanfont"
+        android:text="오픈에어를 이용해 주셔서 감사합니다."
+        android:textColor="#000" />
 
 </LinearLayout>
