--- a/openair/app/src/main/res/values/styles.xml
+++ b/openair/app/src/main/res/values/styles.xml
@@ -16,6 +16,11 @@
 
     </style>
 
+    <style name="MyButton" parent="Theme.AppCompat.Light">
+        <item name="colorControlHighlight">@color/colorSplash</item>
+        <item name="colorButtonNormal">@color/colorLogo</item>
+    </style>
+
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
