--- a/openair/app/src/main/res/layout/activity_signup.xml
+++ b/openair/app/src/main/res/layout/activity_signup.xml
@@ -97,48 +97,24 @@
 
             </android.support.design.widget.TextInputLayout>
 
-
-            <LinearLayout
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="10">
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp">
 
-                <android.support.design.widget.TextInputLayout
+                <EditText
+                    android:id="@+id/phoneNumber"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="10dp"
-                    android:layout_weight="7">
+                    android:layout_height="wrap_content"
+                    android:hint="전화번호"
+                    android:imeActionId="6"
+                    android:imeActionLabel="@string/action_sign_in_short"
+                    android:imeOptions="actionUnspecified"
+                    android:inputType="phone"
+                    android:maxLines="1"
+                    android:singleLine="true" />
 
-                    <EditText
-                        android:id="@+id/phoneNumber"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:focusableInTouchMode="false"
-                        android:hint="전화번호"
-                        android:imeActionId="6"
-                        android:imeActionLabel="@string/action_sign_in_short"
-                        android:imeOptions="actionUnspecified"
-                        android:inputType="phone"
-                        android:maxLines="1"
-                        android:singleLine="true" />
-
-                </android.support.design.widget.TextInputLayout>
-
-                <Button
-                    android:id="@+id/phoneLogin"
-                    style="?android:textAppearanceSmall"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="30dp"
-                    android:layout_weight="3"
-                    android:background="@drawable/bt_corner"
-                    android:fontFamily="@font/ygotjalnanfont"
-                    android:text="인증"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-
+            </android.support.design.widget.TextInputLayout>
 
             <Button
                 android:id="@+id/email_sign_in_button"
@@ -146,7 +122,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
-                android:background="@drawable/bt_corner"
+                android:background="#FCD9F3F7"
                 android:fontFamily="@font/ygotjalnanfont"
                 android:text="@string/action_sign_up"
                 android:textStyle="bold" />
