--- a/openair/app/src/main/res/layout/activity_cash.xml
+++ b/openair/app/src/main/res/layout/activity_cash.xml
@@ -52,13 +52,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@drawable/bt_corner"
+                android:background="#FFF"
                 android:fontFamily="@font/ygotjalnanfont"
-                android:gravity="center"
                 android:text="예약자 정보"
                 android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-                android:textSize="18sp" />
+                android:textSize="16sp" />
 
+            <View
+                android:id="@+id/view19"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_weight="1"
+                android:background="#000" />
+
+            <TextView
+                android:id="@+id/cashname"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="#FFF"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
             <View
                 android:id="@+id/view"
@@ -74,7 +87,7 @@
                 android:layout_weight="1"
                 android:background="#FFF"
                 android:fontFamily="@font/ygotjalnanfont"
-                android:text="이름 (예금주명)"
+                android:text="이름"
                 android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                 android:textSize="16sp" />
 
@@ -85,14 +98,12 @@
                 android:layout_weight="1"
                 android:background="#000" />
 
-            <EditText
+            <TextView
                 android:id="@+id/textView20"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="#FFF"
-                android:fontFamily="@font/hoonddukbokki"
-                android:hint="이름을 입력하세요."
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
             <View
@@ -106,7 +117,6 @@
                 android:id="@+id/textView21"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
                 android:layout_weight="1"
                 android:background="#FFF"
                 android:fontFamily="@font/ygotjalnanfont"
@@ -121,17 +131,46 @@
                 android:layout_weight="1"
                 android:background="#000" />
 
-            <EditText
+            <TextView
                 android:id="@+id/textView22"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="#FFF"
-                android:fontFamily="@font/hoonddukbokki"
-                android:hint="연락처를 입력하세요."
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
+            <View
+                android:id="@+id/view14"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_weight="1"
+                android:background="#000" />
 
+            <TextView
+                android:id="@+id/textView23"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="#FFF"
+                android:fontFamily="@font/ygotjalnanfont"
+                android:text="이메일"
+                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                android:textSize="16sp" />
+
+            <View
+                android:id="@+id/view4"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_weight="1"
+                android:background="#000" />
+
+            <TextView
+                android:id="@+id/textView25"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="#FFF"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
             <View
                 android:id="@+id/view16"
@@ -145,18 +184,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_marginTop="15dp"
                 android:fontFamily="@font/ygotjalnanfont"
                 android:text="결제수단"
                 android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                 android:textSize="16sp" />
-
-            <View
-                android:id="@+id/view5"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_weight="1"
-                android:background="#000" />
 
             <RadioGroup
                 android:layout_width="wrap_content"
@@ -164,52 +195,33 @@
                 android:layout_weight="1">
 
                 <RadioButton
+                    android:id="@+id/radioButton2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="신용카드" />
+
+                <RadioButton
                     android:id="@+id/radioButton3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:fontFamily="@font/hoonddukbokki"
-                    android:text="계좌 이체 (카카오뱅크 3333-06-8405874)" />
+                    android:text="소액결제" />
 
                 <RadioButton
                     android:id="@+id/radioButton4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:fontFamily="@font/hoonddukbokki"
-                    android:text="현장 결제" />
+                    android:text="현장결제" />
             </RadioGroup>
 
             <View
-                android:id="@+id/view99"
+                android:id="@+id/view18"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_weight="1"
                 android:background="#000" />
-
-            <TextView
-                android:id="@+id/textView29"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:layout_weight="1"
-                android:fontFamily="@font/ygotjalnanfont"
-                android:text="주의!"
-                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/textView30"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginTop="10dp"
-                android:fontFamily="@font/hoonddukbokki"
-                android:text="잦은 예약 취소 및 허위 예약, 예약 완료 후 빠른 시간안에 결제를 완료하지 않을 시 다음 예약시에 불이익이 있을 수 있습니다."
-                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-                android:textSize="15sp" />
-
-
 
 
         </LinearLayout>
