--- a/openair/app/src/main/res/menu/activity_main_drawer.xml
+++ b/openair/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,13 +4,11 @@
     tools:showIn="navigation_view">
 
     <item android:title="">
-        android:id="@+id/menu_member"
-        android:checkableBehavior="single">
+
         <item
             android:id="@+id/nav_signup"
             android:icon="@android:drawable/ic_menu_add"
-            android:title="회원가입"
-            />
+            android:title="회원가입" />
         <item
             android:id="@+id/nav_login"
             android:icon="@android:drawable/ic_menu_myplaces"
